examples/errors/son0018_no_afterFunction.js
defineFunction()

function foo() {
    
}


no(a === 10)
